--- a/templates/default/_apache_common.erb
+++ b/templates/default/_apache_common.erb
@@ -41,6 +41,10 @@
     AuthBasicProvider file
     AuthUserFile <%= File.join(node['apache']['dir'], 'htpasswd') %>
     require valid-user
+    <% node['jenkins']['http_proxy']['allow_from'].each do |a| -%>
+    Allow from <%= a%>
+    <% end -%>
+    Satisfy any
   </Location>
 <% end -%>
 
