--- a/templates/default/_apache_common.erb
+++ b/templates/default/_apache_common.erb
@@ -41,6 +41,7 @@
     AuthBasicProvider file
     AuthUserFile <%= File.join(node['apache']['dir'], 'htpasswd') %>
     require valid-user
+    Order allow,deny
     <% node['jenkins']['http_proxy']['allow_from'].each do |a| -%>
     Allow from <%= a%>
     <% end -%>
